fixed z-index on checkbox dropdown

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -1002,6 +1002,7 @@ nav.patient-info li {
   background-color: #ffffff;
   position: absolute;
   display: none;
+  z-index: 1;
  
   
 }
